# mazkir

./: .gitignore  CLAUDE.md  README.md  package.json  personal-ai-assistant-roadmap.md  requirements.txt  skills-lock.json  turbo.json
apps/vault-server/: .env.example  README.md  package.json  pyproject.toml
apps/vault-server/scripts/: migrate_media_to_vault.py
apps/vault-server/src/: auth.py  config.py  logging_setup.py  main.py  tracing_setup.py
apps/vault-server/src/api/routes/: __init__.py  calendar.py  daily.py  events.py  generate.py  goals.py  habits.py  imagery.py  media.py  merged_events.py  message.py  notes.py  tasks.py  timeline.py  tokens.py
apps/vault-server/src/services/: agent_service.py  calendar_service.py  claude_service.py  daily_schedule.py  daily_tasks.py  events_service.py  exif_service.py  generation_service.py  imagery_service.py  memory_service.py  merger_service.py  notes_service.py  parallel_executor.py  preview.py  resolver.py  router_service.py  skill_executor.py  skill_registry.py  timeline_service.py  tool_executor.py  tool_registry.py  tool_response.py  tracing_helpers.py  vault_service.py
apps/vault-server/tests/: conftest.py  test_agent_service.py  test_audit_log_hook.py  test_calendar_service.py  test_capture_skill.py  test_claude_service.py  test_config.py  test_daily_route.py  test_daily_schedule.py  test_daily_tasks.py  test_daily_tools.py  test_events_service.py  test_exif_service.py  test_generation_service.py  test_goal_operations.py  test_habit_operations.py  test_hooks.py  test_imagery_service.py  test_integration.py  test_logging_setup.py  test_media_route.py  test_memory_service.py  test_merger_service.py  test_message_models.py  test_message_route_streaming.py  test_migrate_media.py  test_notes_route.py  test_notes_service.py  test_parallel_executor.py  test_parallel_tracing.py  test_per_tool_thresholds.py  test_preview.py  test_prompt_caching.py  test_resolver.py  test_router_service.py  test_skill_executor.py  test_skill_loop.py  test_skill_registry.py  test_skill_set.py  test_streaming.py  (+11 more)
(+145 files in other folders)
