[project]
name = "vault-server"
version = "0.1.0"
description = "Mazkir vault REST API server"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-frontmatter>=1.0.0",
    "python-dateutil>=2.8.2",
    "pytz>=2024.1",
    "anthropic>=0.18.0",
    "google-api-python-client>=2.100.0",
    "google-auth-httplib2>=0.1.0",
    "google-auth-oauthlib>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "replicate>=0.25.0",
    "Pillow>=10.0.0",
    "python-multipart>=0.0.22",
]

[tool.ruff.lint.per-file-ignores]
"src/main.py" = ["E402"]
"src/services/calendar_service.py" = ["E402"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
]
